--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "framer-motion": "^11.0.15",
     "inshorts-news-api": "^2.0.0",
     "mysql": "^2.18.1",
-    "openai": "^4.28.4",
+    "openai": "^4.29.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
