--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "major",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yourusername.github.io/your-repository-name",
+  "homepage": "https://tavanamvishnu.github.io/cult/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
