--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-router-dom": "^6.21.3"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
+  "main": "Home.js",
   "keywords": [],
   "author": "",
   "license": "ISC"
